<resources>
    <string name="app_name">DAOProjektSI</string>
    <string name="title_activity_login">Logowanie</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Haslo</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="error_invalid_email">Nieprawidlowy adres Email</string>
    <string name="error_invalid_password">Za krotkie haslo</string>
    <string name="error_incorrect_password">Nieprawidlowe haslo</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Pozwolenie na dostęp do kontaktow jest wymagane w celu prawidlowej obslugi adresu Email"
    </string>
    <string name="action_reset">Resetuj haslo</string>
    <string name="passwords_do_not_match">Hasla sa rozne!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="odczyt">Wartosc odczytu</string>
    <string name="data_odczytu">Data odczytu: dd.mm.rrrr</string>
    <string name="dodaj">Dodaj</string>
    <string name="miesiac">Miesiac</string>
    <string name="rok">Rok</string>

    <string-array name="miesiac_spinner">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="rok_spinner">
        <item>2017</item>
        <item>2018</item>
    </string-array>

    <string-array name="menu">
        <item>Dodaj Odczyt Liczników</item>
        <item>Miesięczne opłaty</item>
        <item>Nowa Wiadomość</item>
    </string-array>
    <string name="pokaz_odczyt">Odczyt</string>
    <string name="odbiorca">Odbiorca</string>
    <string name="temat">Temat wiadomości</string>
    <string name="dodaj_zalacznik">Dodaj załącznik</string>
    <string name="wyslij">Wyślij</string>

    <string name="open_drawer">Otwórz szufladę</string>
    <string name="close_drawer">Zamknij szufladę</string>
    <string name="nowa_wiadomosc">Nowa Wiadomość</string>
    <string name="skrzynka_odbiorcza">Skrzynka odbiorcza</string>
    <string name="usun">Usuń</string>
    <string name="glosowanie">Głosowanie</string>
    <string name="zaglosuj">Zagłosuj</string>
    <string name="pokazProjekt">Pokaż projekt</string>
    <string name="finanse_wspolnoty">Finanse wspólnoty</string>
    <string name="przychody">Przychody</string>
    <string name="obciazenia">Obiążenia</string>
    <string name="lista_sprzetow">Lista Sprzętów</string>
</resources>
